<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/parentViewStyle"
    android:screenOrientation="portrait"
    tools:context=".ChooseActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/signInButton"
        style="@style/ubiquiButton"
        android:layout_marginBottom="30dp"
        android:onClick="startSignIn"
        android:text="@string/signIn"
        app:layout_constraintBottom_toTopOf="@id/createAccButton"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/createAccButton"
        style="@style/ubiquiButton"
        android:layout_marginBottom="30dp"
        android:onClick="startRegister"
        android:text="@string/createAcc"
        app:layout_constraintBottom_toTopOf="@id/guestButton"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/guestButton"
        style="@style/ubiquiButton"
        android:onClick="startAsGuest"
        android:text="@string/guest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccButton"
        app:layout_constraintWidth_percent="0.80" />

</android.support.constraint.ConstraintLayout>