<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    tools:context=".ControllerActivity">

    <Button
        android:id="@+id/boostButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/boost"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.64"
        app:layout_constraintHeight_percent="0.487"/>

    <Button
        android:id="@+id/leftButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/left"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.315"
        app:layout_constraintHeight_percent="0.495"/>

    <Button
        android:id="@+id/rightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/right"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintWidth_percent="0.315"
        app:layout_constraintHeight_percent="0.495"/>

    <Button
        android:id="@+id/accelerateButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/accelerate"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"

        android:background="@color/transparent_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="1"/>

</android.support.constraint.ConstraintLayout>