<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    style="@style/parentViewStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    tools:context="com.ubiquigame.controller.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/avatar_default"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.4" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/emailLayout"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.75">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.75" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.75"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="@color/colorPrimary" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:textSize="24sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/editButton"
        style="@style/ubiquiButton"
        android:layout_marginBottom="20dp"
        android:onClick="edit"
        android:text="@string/edit"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/logoutButton"
        style="@style/ubiquiButton"
        android:onClick="logoutUser"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="5.5:1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editButton"
        app:layout_constraintWidth_percent="0.7" />

</android.support.constraint.ConstraintLayout>
